@@ -1,0 +1,19 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Constants.ItemIds.Objects
+{
+    public class ResourceObjectIds
+    {
+
+        public const string CopperOreBush = "Revitalize.Objects.Resources.CopperOreBush";
+        public const string IronOreBush = "Revitalize.Objects.Resources.IronOreBush";
+        public const string GoldOreBush = "Revitalize.Objects.Resources.GoldOreBush";
+        public const string IridiumOreBush = "Revitalize.Objects.Resources.IridiumOreBush";
+        public const string RadioactiveOreBush = "Revitalize.Objects.Resources.RadioactiveOreBush";
+
+    }
+}
